DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2002-08-01 patrickh    Enabled compiling of profiled libraries.
2002-07-14 patrickh    Extended org.vrjuggler.tweek.beans.FileLoader to include
                       a method for indicating that the user wants to save an
                       open file with a different name (a "Save As ..."-type
                       option).
                       NEW VERSION: 0.6.1
2002-07-14 patrickh    org.vrjuggler.tweek.gui.MessagePanel is no longer a
                       singleton.  Further, it now uses a custom document,
                       org.vrjuggler.tweek.text.MessageDocument, an
                       instance of which is held by the TweekCore singleton.
                       NEW VERSION: 0.6.0
2002-07-13 patrickh    Added a new command-line option, --validate, that
                       directs the XML loader to validate XML beanlist
                       documents against the XML Schema that describes them.
2002-07-05 nonchocoboy Added support for programmtic focusing of PanelBeans in
                       BeanModelViewers. The --defaultbean command-line
                       argument has been added.
2002-07-03 patrickh    Subject Manager servants are now named using a GUID to
                       guarantee automatic uniqueness without using a special
                       naming context.  The tweek::SubjectManager interface 
                       has been extended to provide clients with additional
                       instance-specific information about a given reference.
                       NEW VERSION: 0.5.0
2002-06-24 patrickh    The tweek-config script is now written in Perl.  It is
                       capable of determining its installation path at runtime.
2002-05-09 nonchocoboy The Bean XML files now name the Bean class rather than
                       the JAR file entry.
                       NEW VERSION: 0.4.0